# lkmlstyle

./: .gitignore  README.md  check.py  lkmlstyle.example.yaml  lkmlstyle.yaml  requirements.txt  rules.yaml  setup.cfg
.github/workflows/: rules_to_yaml.py  write_yaml_rules.yaml
lkmlstyle/: check.py  cli.py  rules.py  utils.py
tests/: test_check.py  test_rules.py  test_utils.py
