[metadata]
name = lkmlstyle
version = 0.0.1
author = Josh Temple
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spectacles-ci/lkmlstyle

[options]
packages = find:
python_requires = >=3.9
install_requires =
    PyYAML
    lkml >=1.2.0

[options.entry_points]
console_scripts =
    lkmlstyle = lkmlstyle.cli:main